# pythonpe-blog

./: .buildinfo  .gitignore  AUTHORS  CNAME  README.md  about.md  about.rst  authors.py  conf.py  giscus.json  index.html  index.md  index.rst  objects.inv  pyproject.toml  recent_posts.md  requirements.txt  robots.txt  searchindex.js  sitemap.xml
.github/: dependabot.yml
.github/workflows/: blog.yml  ci.yml  deploy-site.yml
_sources/blog/: Introduccion-a-DuckDB.md.txt  como-redactar-posts.md.txt  estructura-cv-python-I.md.txt  estructura-cv-python-II.md.txt  haciendo-app-chat-gpt-con-tech-pyodide.md.txt  integrando-jupyterlite-en-sphinx.md.txt  leyendo-csv-pandas-python.md.txt  manejo-timezones-python.md.txt  mojo-alternativa-a-python.md.txt  python-ulid.md.txt  scraping-con-playwright-y-asyncio.md.txt  scraping-requests-bs.md.txt
_static/css/: markdown.css
_templates/: giscus.html  page.html  recent_posts.html
about/: index.html
blog/: asistente-virtual-con-gpt4all.md  atom.xml  como-redactar-articulos.md  como-redactar-posts-con-fork.md  como-redactar-posts.md  desarrollo-app-con-flet.md  estructura-cv-python-I.md  estructura-cv-python-II.md  first-post.rst  haciendo-app-chat-gpt-con-tech-pyodide.md  index.html  integrando-jupyterlite-en-sphinx.md  intro-criptografia.md  leyendo-csv-pandas-python.md  manejo-timezones-python.md  mojo-alternativa-a-python.md  puede-python-analizar-mil-millones-de-filas-rapidamente.md  yt-insight-generator.md
blog/2024/: atom.xml  index.html
genindex/: index.html
recent_posts/: index.html
search/: index.html
(+167 files in other folders)
