[tool.poetry]
name = "pythonpe-blog"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Sphinx = "^7.2.6"
ablog = "^0.11.6"
pydata-sphinx-theme = "^0.15.2"
myst-parser = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
