[project]
authors = [
    {name = "Ider Delzo", email = "soloidx@gmail.com"},
    {name = "Jean-Pierre Chauvel", email = "jean.pierre@chauvel.org"},
]
license = {text = "Apache License, Version 2.0"}
requires-python = "<4.0,>=3.13"
dependencies = [
    "Sphinx<8.0.0,>=7.2.6",
    "ablog<1.0.0,>=0.11.6",
    "pydata-sphinx-theme<1.0.0,>=0.15.2",
    "myst-parser[linkify]<3.0.0,>=2.0.0",
    "sphinxcontrib-youtube<2.0.0,>=1.4.1",
    "sphinx-sitemap<3.0.0,>=2.5.1",
    "sphinxext-opengraph<1.0.0,>=0.9.1",
    "matplotlib<4.0.0,>=3.8.4",
]
name = "pythonpe-blog"
version = "0.1.0"
description = ""
readme = "README.md"
package-mode = false

[dependency-groups]
dev = [
    "isort>=6.0.1,<8.0.0",
    "black<26.0.0,>=25.1.0",
]

[tool.black]
line-length = 79
